Fix dropdown position, add close event on scroll and hide description if it doesn't fit

--- a/src/plugins/data/public/ui/typeahead/_suggestion.scss
+++ b/src/plugins/data/public/ui/typeahead/_suggestion.scss
@@ -8,6 +8,7 @@ $kbnTypeaheadTypes: (
 
 .kbnTypeahead {
   position: relative;
+  opacity: 0;
 
   .kbnTypeahead__popover {
     max-height: inherit;
